--- a/tests/FunctionalTest/Fixtures/config/class1.yml
+++ b/tests/FunctionalTest/Fixtures/config/class1.yml
@@ -3,3 +3,6 @@ services:
         class: DI\Bridge\Symfony\Test\FunctionalTest\Fixtures\Class1
         public: true
         arguments: [ '@DI\\Bridge\\Symfony\\Test\\FunctionalTest\\Fixtures\\Class2' ]
+
+    'DI\\Bridge\\Symfony\\Test\\FunctionalTest\\Fixtures\\Class2':
+        class: DI\Bridge\Symfony\Test\FunctionalTest\Fixtures\Class2
