--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": "~7.3",
-        "php-di/php-di": "~6.0",
+        "php-di/php-di": "^5.4",
         "symfony/dependency-injection": "^5.0",
         "symfony/http-kernel": "^5.0",
         "symfony/proxy-manager-bridge": "^5.0",
